# cubik-backend-v2

./: Cargo.toml  README.md
cubik_common/: Cargo.toml
cubik_dashboard/: Cargo.toml
cubik_dashboard/src/: main.rs
cubik_web/: Cargo.toml
cubik_web/src/: main.rs
