[package]
name = "cubik_web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cubik_common = {path = "../cubik_common"}
tokio = {workspace = true}
tracing-subscriber = {workspace = true}
axum = {workspace = true}
tracing = {workspace = true}